# drift

./: .cirrus.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  TODO  a.html  analysis_options.yaml  melos.yaml  netlify.toml  pubspec.yaml
docs/: .gitignore  404.html  CNAME  Gemfile  README.md  _config.yml  analysis_options.yaml  build.deploy.yaml  build.yaml  config.toml  dartdoc.build.yaml  docs.sh  index.md  migrate.dart  mkdocs.yml  netlify.toml  package-lock.json  package.json  pubspec.yaml  theme.yaml  website.yaml
drift/: .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  build.test.yaml  build.yaml  dart_test.yaml  pubspec.yaml  pubspec_overrides.yaml
drift_core/: CHANGELOG.md  README.md  pubspec.yaml
drift_dev/: CHANGELOG.md  LICENSE  README.md  build.yaml  dart_test.yaml  drift_dev.build.yaml  drift_dev.yaml  pubspec.yaml  pubspec_overrides.yaml
drift_flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
drift_isolate_repro/: README.md  pubspec.yaml
drift_sqflite/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
drift_workmanager_bug/: README.md  pubspec.yaml
end_to_end_testing/: pubspec.yaml
example/: .flutter-plugins  README.md  pubspec.yaml
examples/: README.md
moor/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  build.yaml  dart_test.yaml  mono_pkg.yaml  pubspec.yaml
moor_ffi/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
moor_ffi/android/cpp/: CMakeLists.txt
moor_flutter/: .flutter-plugins  CHANGELOG.md  README.md  pubspec.yaml  (+1 more)
(+2660 files in other folders)
