cmake_minimum_required(VERSION 3.4.1)
project(
    moor_ffi_android
    VERSION 3
    LANGUAGES C
)

set(CMAKE_C_FLAGS "-O3")

add_library(sqlite3 SHARED sqlite3.c)

target_compile_definitions(sqlite3 PUBLIC
    SQLITE_DQS=0
    SQLITE_THREADSAFE=0
    SQLITE_DEFAULT_MEMSTATUS=0
    SQLITE_MAX_EXPR_DEPTH=0
    SQLITE_OMIT_AUTHORIZATION
    SQLITE_OMIT_DECLTYPE
    SQLITE_OMIT_DEPRECATED
    SQLITE_OMIT_GET_TABLE
    SQLITE_OMIT_LOAD_EXTENSION
    SQLITE_OMIT_PROGRESS_CALLBACK
    SQLITE_OMIT_SHARED_CACHE
    SQLITE_OMIT_TCL_VARIABLE
    SQLITE_OMIT_TRACE
    SQLITE_USE_ALLOCA
    SQLITE_UNTESTABLE
    SQLITE_HAVE_ISNAN
    SQLITE_ENABLE_FTS5
    SQLITE_ENABLE_JSON1
)